--- a/app/particle/particle.css
+++ b/app/particle/particle.css
@@ -6,6 +6,11 @@
 	filter:url(#motionBlur);
 }
 
+[data-paused="0"] .viewport-particles > *,
+[data-paused="-1"] .viewport-particles > * {
+	animation-play-state: paused !important;
+}
+
 @keyframes particle-animate {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
