--- a/app/Menu/main-menu.css
+++ b/app/Menu/main-menu.css
@@ -51,9 +51,9 @@
 	/*text-align: center;*/
 }
 
-.screen-card-main-menu li:focus::before,
-.screen-card-main-menu li:focus-within::before,
-.screen-card-main-menu li.focused::before {
+.screen-card-main-menu li:focus span.title::before,
+.screen-card-main-menu li:focus-within span.title::before,
+.screen-card-main-menu li.focused span.title::before {
 	position: absolute;
 	width: 8px;
 	height: 8px;
@@ -62,7 +62,7 @@
 	background-position-x: -0px;
 	margin-top: auto;
 	margin-bottom: auto;
-	margin-top: 3px;
+	margin-top: 4px;
 	background-size: 900% 200%;
 	background-image: url(/Sonic/cursor.png);
 	content: '';
