--- a/app/ui/button-font-xbox.css
+++ b/app/ui/button-font-xbox.css
@@ -14,6 +14,8 @@
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	width: 1.1em;
+	margin-left: 0.125em;
+	margin-right: 0.125em;
 	height: 1.25em;
 	transform: translateY(2px);
 }
@@ -24,6 +26,8 @@
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	width: 1.1em;
+	margin-left: 0.125em;
+	margin-right: 0.125em;
 	height: 1.25em;
 	transform: translateY(2px);
 }
