--- a/app/region/shade-region.css
+++ b/app/region/shade-region.css
@@ -69,9 +69,9 @@
 	position: absolute;
 
 	left:    0;
-	top:     -16px;
-	width:   calc(100% + 128px);
-	height:  calc(100% + 128px);
+	top:     0px;
+	width:   calc(var(--viewportWidth) + 1px);
+	height:  calc(var(--viewportHeight) + 1px);
 	/*width:   calc(var(--viewportWidth));
 	height:  calc(var(--viewportHeight) + 128px);*/
 }
