--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -68,21 +68,36 @@
 }
 
 .emerald-hud {
+	margin-right: 3px;
 	padding-top: 2px;
+	margin-top: 0px;
 	display: flex;
 	flex-direction: row-reverse;
+}
+
+.emblem-hud {
+	padding-right: 1px;
+	display: flex;
+	flex-direction: row-reverse;
+	flex-wrap: wrap;
+	max-width: 5rem;
+	margin-top: 3px;
+}
+
+.emblem-hud img {
+	padding: 1.5px;
 }
 
 .emerald-hud img {
 	width: 5px;
 	height: 5px;
-	padding: 2.5px;
+	padding: 2.5px 2.75px;
 }
 
 .hud-bottom-right {
 	display: block;
 	position: absolute;
-	bottom:18px;
+	bottom:12px;
 	right: 2px;
 	display: flex;
 	flex-direction: column;
@@ -243,6 +258,15 @@
 .viewport .hud tr > td:nth-child(2) {
 	margin: 0;
 	text-align: right;
+}
+
+.emblem-hud img {
+	filter:
+		drop-shadow(1px 1px 0px rgba(0, 0, 0, 0.35))
+		drop-shadow(-1px -1px 0px rgba(0, 0, 0, 0.35))
+		drop-shadow(-1px 1px 0px rgba(0, 0, 0, 0.35))
+		drop-shadow(1px -1px 0px rgba(0, 0, 0, 0.35))
+	;
 }
 
 .emerald-hud img,
