--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -57,7 +57,7 @@
 	transform: translate(-50%) rotateY(180deg);
 }
 
-.point-actor[data-mercy=true] {
+.point-actor:not([data-mercy="0"]):not([data-mercy=false]) {
 	animation: mercy-flicker 250ms 500ms infinite steps(1) forwards;
 }
 
