--- a/app/powerups/sheild.css
+++ b/app/powerups/sheild.css
@@ -307,10 +307,14 @@
 }
 
 [data-facing=right][data-mode="2"][data-animation=rolling] .fire-sheild,
-[data-facing=right][data-mode="2"][data-animation=jumping] .fire-sheild,
+[data-facing=right][data-mode="2"][data-animation=jumping] .fire-sheild {
+	left: 16px;
+	top: 24px;
+}
+
 [data-facing=right][data-mode="2"][data-animation=rolling] .bubble-sheild,
 [data-facing=right][data-mode="2"][data-animation=jumping] .bubble-sheild {
-	left: 16px;
+	left: 4px;
 	top: 24px;
 }
 
