--- a/app/Menu/menu.css
+++ b/app/Menu/menu.css
@@ -18,7 +18,7 @@
 	box-shadow: 0em 0.05em 0.25em rgba(255,255,255,0.25);
 	backdrop-filter: blur(1.25px);
 	border: 1px solid transparent;
-	margin: 1em;
+	margin: 0.5em;
 	text-align: center;
 	list-style: none;
 
@@ -37,6 +37,7 @@
 	border-radius: 5px;
 	border-color: white;
 	/*text-shadow: 0em 0.15em 0.125em black;*/
+	margin-bottom: 2em;
 }
 
 .screen-card.screen-card-pause-menu .menu-container > div {
