--- a/app/actor/tails.css
+++ b/app/actor/tails.css
@@ -64,6 +64,11 @@
 	top: 32px;
 }
 
+.actor-item.actor-tails[data-animation="grinding"] .sprite:after {
+	--sprite-offset-x: -128px;
+	--sprite-offset-y: -256px;
+}
+
 .actor-item.actor-tails[data-animation="dead"] .sprite:after {
 	--sprite-offset-x: -0px;
 	--sprite-offset-y: -512px;
