--- a/app/Menu/menu.css
+++ b/app/Menu/menu.css
@@ -38,6 +38,11 @@
 	border-color: white;
 	/*text-shadow: 0em 0.15em 0.125em black;*/
 	margin-bottom: 2em;
+	outline: none;
+}
+
+.screen-card.screen-card-pause-menu li:focus .subtext {
+	text-shadow: 1px 1px 0px #000;
 }
 
 .screen-card.screen-card-pause-menu .menu-container > div {
